[package]
name = "doorstop-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description= "Library for reading doorstop documents"
homepage= "https://github.com/invap/doorstop-rs"
repository= "https://github.com/invap/doorstop-rs"
readme= "README.md"
keywords=["Doorstop","Requirements", "Deserialization"]
authors= ["Juan Ignacio Vaccarezza <jivaccarezza@invap.com.ar>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
env_logger = "0.11.2"
log = "0.4.20"
serde = {version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.58"
walkdir = "2.4.0"
yaserde = "0.10.0"
yaserde_derive = "0.10.0"
